--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-dom-confetti": "0.0.10",
