--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "react": "^16.4.2",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.4.2",
     "react-dom-confetti": "0.0.10",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-table": "^6.8.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
