--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.14",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
