--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^6.0.0",
     "esm": "^3.0.84",
     "express": "^4.16.3",
     "mongodb": "^3.1.1",
